prod.tf
provider "aws" {
    profile = "default"
    region = "eu-west-2"
}

/*
*aws bucket
*/
resource "aws_s3_bucket" "prod_tf_course" {
    bucket = "tf-course-2020-05-11"
    acl    = "private"
}

resource "aws_default_vpc" "default" {}

resource "aws_security_group" "prod_web" {
    name        = "prod_web"
    description = "Allow standard http and https ports inbound and everything outbound"

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["31.205.106.93/32"] 
    }
       ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["31.205.106.93/32"] 
    }

    egress {
        from_port = 0
        to_port   = 0
        protocol  = "-1"
        cidr_blocks = ["31.205.106.93/32"] 
    }

    tags = {
        "terraform" : "true"
    }
}
